Hide OSD canvas to stop flicker.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -217,6 +217,10 @@ html, body, .viewport {
             padding: 0;
             background: rgb(0, 0, 0);
         }
+		
+		#osd-overlaycanvas {
+			background: rgb(0, 0, 0);
+		}
     }
 
     .bottom-toolbar {
